--- a/public/style.css
+++ b/public/style.css
@@ -30,3 +30,11 @@ form div {
   align-items: center;
 }
 
+.trips-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
