--- a/public/style.css
+++ b/public/style.css
@@ -30,3 +30,12 @@ form div {
   align-items: center;
 }
 
+input[type="date"]::-webkit-inner-spin-button,
+input[type="date"]::-webkit-calendar-picker-indicator {
+  display: none;
+  -webkit-appearance: none;
+}
+
+.results-container {
+  width: 100vw;
+}
