--- a/public/style.css
+++ b/public/style.css
@@ -96,12 +96,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .container {
-  padding-top: 8em;
-}
-
-.navigate-home-container {
-  padding-top: 8em;
-  text-align: center;
+  padding-top: 5em;
 }
 
 .loading-data-container {
@@ -114,22 +109,20 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  background-color: pink;
 }
 
 .trip-result-container {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  background-color: greenyellow;
-  padding: 2em;
+  /* padding: 2em; */
 }
 
 .trip-analysis {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  background-color: orange;
+  text-align: center;
   padding: 2em;
 }
 
@@ -137,7 +130,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  background-color: lightblue;
   padding: 2em;
 }
 
@@ -145,14 +137,16 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  background-color: violet;
   width: 100%;
   padding: 2em;
 }
 
-.navigate-home-error {
+.navigate-home-container {
+  text-align: center;
   display: flex;
   justify-content: center;
-  text-align: center;
+  align-items: center;
+  flex-direction: column;
 }
+
 
