--- a/public/style.css
+++ b/public/style.css
@@ -67,7 +67,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   }
 }
 
-.chart-container {
+.trip-history-pie-container {
   display: flex;
   width: 100%;
   align-items: flex-start;
@@ -83,7 +83,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .map-chart {
-  width: 60%;
+  width: 80%;
   display: flex;
   text-align: center;
   flex-direction: column;
@@ -92,18 +92,19 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .table-container {
   margin-bottom: 4em;
+  justify-content: left;
 }
 
 .container {
- padding-top: 8em;
+  padding-top: 8em;
 }
 
 .navigate-home-container {
- padding-top: 8em;
- text-align: center;
+  padding-top: 8em;
+  text-align: center;
 }
 
 .loading-data-container {
   padding-top: 8em;
   text-align: center;
- }
+}
