--- a/public/style.css
+++ b/public/style.css
@@ -24,8 +24,7 @@ form div {
   display: flex;
   flex-direction: row;
   align-items: center;
-  background-color: white;
-  height: 80px;
+  height: 90px;
 }
 
 .button-container {
@@ -238,15 +237,16 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .search-container {
-  padding-top: 12em;
+  padding-top: 5em;
   /* background: url("images/hero-image.jpg") no-repeat center center fixed; */
-  background: url(images/5.png) no-repeat center center fixed;
+  /* background: url(images/5.png) no-repeat center center fixed; */
   height: 100vh;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
+
 
 .input-container {
   width: 70%;
