--- a/public/style.css
+++ b/public/style.css
@@ -52,7 +52,6 @@ form div {
   align-items: center;
 } */
 
-
 input[type="date"]::-webkit-inner-spin-button,
 input[type="date"]::-webkit-calendar-picker-indicator {
   /* color: rgba(0, 0, 0, 0);
@@ -217,7 +216,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   background-size: auto;
   width: 400px !important;
   /* border: none; */
-  /* margin-top: 30px; 
+/* margin-top: 30px; 
   margin-left: 30px;
   margin-bottom: 10px; */
 /* } */
@@ -247,7 +246,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   background-size: cover;
 }
 
-
 .input-container {
   width: 70%;
   margin: 0 auto;
@@ -258,4 +256,8 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   padding-bottom: 50px;
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.7);
+}
+
+.bold-text {
+  font-weight: 700;
 }
