--- a/public/style.css
+++ b/public/style.css
@@ -210,25 +210,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   flex-direction: column;
 }
 
-/* .logo-container {
-  background: url("images/logo1.png");
-  background-repeat: no-repeat;
-  background-size: auto;
-  width: 400px !important;
-  /* border: none; */
-/* margin-top: 30px; 
-  margin-left: 30px;
-  margin-bottom: 10px; */
-/* } */
-
-.logo-container {
-  background: url("images/logo1.png");
-  background-repeat: no-repeat;
-  background-size: auto;
-  width: 225px;
-  height: 33px;
-}
-
 .container-logo {
   display: flex;
   align-items: center;
@@ -254,6 +235,9 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .input-container {
   width: 70%;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .box-test {
@@ -265,4 +249,21 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .bold-text {
   font-weight: 700;
+}
+
+.search-row-container {
+  display: flex;
+  flex-direction: row;
+  width: 95%;
+  justify-content: space-evenly;
+  align-items: flex-start;
+}
+
+.input-container {
+  display: flex;
+  justify-content: center;
+}
+
+.location-input {
+  width: 180px;
 }
