--- a/public/style.css
+++ b/public/style.css
@@ -293,6 +293,13 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     justify-content: space-between;
     width: 100%;
   }
+  .confirmation-page-graph {
+    width: 90%;
+  }
+  .table-width {
+    width: 90%;
+  }
+
 }
 
 @media (max-width: 550px) {
@@ -312,17 +319,16 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     justify-content: space-between;
     width: 100%;
   }
-
-}
-
-@media (max-width: 1000px) {
-  .confirmation-page-graph {
-    width: 90%;
+  th{
+    padding: 2px !important;
+    font-size: .75em;
   }
-  .table-width {
-    width: 90%;
+  td{
+    padding: 2px !important;
+    font-size: .75em;
   }
 }
+
 
 .modal-content {
   display: flex;
