--- a/public/style.css
+++ b/public/style.css
@@ -327,6 +327,23 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     padding: 2px !important;
     font-size: .75em;
   }
+  .trip-history-pie-container {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+  }
+  .pie-chart {
+    width: 90%;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .th-td-trip-detail {
+    font-size: .50em;
+  } 
 }
 
 
